Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -40,7 +40,7 @@ oc delete routes.route.openshift.io todo-http
 
 ### 1. Generate a Private Key:
 ```
-openssl genrsa -out /tmp/myserver.key 4096
+openssl genrsa -out server.key 4096
 ```
 - openssl genrsa: This command generates an RSA private key.
 - -out server.key: Specifies the output file name for the key.
@@ -49,7 +49,7 @@ openssl genrsa -out /tmp/myserver.key 4096
 ### 2. Generate the CSR file:
 
 ```
-openssl req -new -key server.key -out server.csr -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=anishrana2001.apps.ocp4.example.com"
+openssl req -new -key server.key -out server.csr -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
 ```
 
 
