Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -65,7 +65,7 @@ openssl req -new -key server.key -out server.csr -subj "/C=US/ST=North Carolina/
 
 ### 3. Generate the Certificate.
 ```
-openssl x509 -req -day 365 -in server.csr -signkey server.key -out server.crt
+openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
 ```
 - openssl x509: This command generates the certificate.
 - -days 365: Specifies the validity period of the certificate in days (365 in this example).
