--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -81,6 +81,17 @@ oc set serviceaccount deployment/deployment_name ex280-sa
 ```
 oc get pods
 ```
+### How to do post check ?
 ```
-oc get route
+oc get deployment gitlab -o yaml | grep -i service
 ```
+### You must obseve output like below:
+```
+[student@workstation ~]$ oc get deployment gitlab -o yaml | grep -i service
+      serviceAccount: ex280-sa
+      serviceAccountName: ex280-sa
+[student@workstation ~]$ 
+```
+
+
+
