--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -25,7 +25,8 @@ oc create serviceaccount --help | less
 ```
 oc create serviceaccount ex280-sa -n alpha
 ```
-
+### oc adm policy add-scc-to-user <scc_name>  system:serviceaccount:<serviceaccount_namespace>:<serviceaccount_name>
+### If you are currently in the project to which the service account belongs, you can use the -z flag and just specify the <serviceaccount_name>.
 ### Security Context Constraints (SCCs)
 ```
 oc adm policy --help | less
