--- a/DO280/10. scale-deployment.md
+++ b/DO280/10. scale-deployment.md
@@ -5,7 +5,7 @@ oc new-project tiger
 oc new-app --name hello --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
 ```
 # Scale Application Manually:
-## Question: Scale the single-pod replicas to `5` under the project `tiger` and all pods should run:
+## Question: Scale the single-pod replicas to `5` under the project `tiger` and all pods should run.
 ---
 ### Solution:
 ### Go to the project, first.
