Update 18. Collect Cluster information.md

--- a/DO280/18. Collect Cluster information.md
+++ b/DO280/18. Collect Cluster information.md
@@ -2,7 +2,7 @@
 # Collect Cluster information and create a tar file with name student101<cluster.id>.tar.gz and send it to redhat support.
 - Use command tar cvaf
 - One script has been provided to upload tar in redhat support
-- /usr/bin/script student101<cluster.id>.tar.gz
+- /usr/bin/script student101-<cluster.id>.tar.gz
 - This script can be performed multiple times and it will overwrite the tar file every time
 ---
 ### Solution
