--- a/DO280/15. Volume.md
+++ b/DO280/15. Volume.md
@@ -13,7 +13,7 @@
 - **Create an Deployment with**
 	- Name of deployment is `tiger`
 	- Image is  `registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0`
-	- Application uses this link to show output http://contet.example.oco4.com
+	- Application uses this link to show output http://test-anishrana2001.apps.ocp4.example.com
 	- After attaching storage it shows desired output
 ---
 
