--- a/DO280/11. AutoScale.md
+++ b/DO280/11. AutoScale.md
@@ -18,12 +18,19 @@ oc project scalling
 ```
 oc get all
 ```
+### Task 1. Minimum replicas = 2 , Maximum replicas = 5 and cpu percentage = 50%
+```
+oc autoscale deployment httpd --min=2 --max=5 --cpu-percent=50
+```
+### Post check
+```
+oc get hpa
+```
 
-### Take an example, httpd named deployment is running. Let's complete the 2nd task first.
-### Default request for containers memory should 100Mi and CPU 50m
-### We can directly `edit` the deployment "oc edit de/httpd". Or we can use "oc set resources". Command is more easy.
+### Task 2: Default request for containers memory should 100Mi and CPU 50m
+### We can directly `edit` the deployment "oc edit deployment/httpd". Or we can use "oc set resources". Command is more easy.
+### Syntax would be "oc set resources deployment/httpd `--requests` cpu=200m,memory=256Mi `--limits` cpu=500m,memory=512Mi
 
- ### Need to check.
 ```
 oc set resources deployment/httpd --requests=cpu=50m,memory=100Mi 
 ```
@@ -41,11 +48,4 @@ Add below lines
            cpu: “200m”
 ```
 
-### Task 1. Minimum replicas = 2 , Maximum replicas = 5 and cpu percentage = 50%
-```
-oc autoscale deployment httpd --min=2 --max=5 --cpu-percent=50
-```
-### Post check
-```
-oc get hpa
-```
+
