Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -1,19 +1,89 @@
-# Question 1. An application is running on the `red` project. There is one pod running and your task is it must generate the output.
+## How to create the lab for question1?
+```
+oc adm taint node $(oc get nodes | awk '{print $1}' | grep -v NAME) datacenter=delhi:NoSchedule
+oc new-project chapter1
+oc new-app --name webserver-app1 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0 --replicas 1
+```
+
+
+# Question 1. An application is running on the `chapter1` project. There is one pod running and your task is it must generate the output.
 
 ```
-oc project red
+oc project chapter1
 ```
+### Pre-Check, you must observe that pod is in the pending state.
 ```
 oc get all
 ```
+### Identify the nodes on which having issue.
+```
+oc get pods -o wide
+```
+### Check the events. 
+```
+oc env
+```
 
 ```
-oc get nodes
-```
+3m14s                 Normal    ScalingReplicaSet   Deployment/webserver-app1              Scaled up replica set webserver-app1-c8995748c to 1
+3m14s                 Normal    ScalingReplicaSet   Deployment/webserver-app1              Scaled up replica set webserver-app1-6bc4fdd7b6 to 1
+3m14s                 Normal    SuccessfulCreate    ReplicaSet/webserver-app1-c8995748c    Created pod: webserver-app1-c8995748c-4cg5l
+3m14s                 Warning   FailedScheduling    Pod/webserver-app1-c8995748c-4cg5l     0/1 nodes are available: 1 node(s) had untolerated taint {datacenter: delhi}. preemption: 0/1 nodes are available: 1 Preemption is not helpful for scheduling..
+3m13s                 Warning   FailedCreate        ReplicaSet/webserver-app1-6bc4fdd7b6   Error creating: Pod "webserver-app1-6bc4fdd7b6-6kzn4" is invalid: spec.containers[0].image: Invalid value: " ": must not have leading or trailing whitespace
+30s (x7 over 3m12s)   Warning   FailedCreate        ReplicaSet/webserver-app1-6bc4fdd7b6   (combined from similar events): Error creating: Pod "webserver-app1-6bc4fdd7b6-wvwzj" is invalid: spec.containers[0].image: Invalid value: " ": must not have leading or trailing whitespace
+
 
 ```
-oc describe node node_name | grep -i taint
+### If you observe the `untolerated taint` errror message, it means that taint is applied on nodes and you have to add the toleration on pod or remove the taint from the node.
 ```
+oc describe node master01 | grep -i taint
+```
+
+## How to remove the taint from nodes? Please note that, if you have multiple nodes then you have to remove the taint from all the workernodes. 
+```
+oc adm taint node master01 datacenter-
+```
+### Post check.
+```
+oc get pods
+```
+
+#### See the below output only for your references.
+```
+[student@workstation ~]$ oc get pods
+NAME                             READY   STATUS    RESTARTS   AGE
+webserver-app1-c8995748c-4cg5l   0/1     Pending   0          6m44s
+[student@workstation ~]$ oc describe node master01 | grep -i taint
+Taints:             datacenter=delhi:NoSchedule
+[student@workstation ~]$ oc adm taint node master01 datacenter-
+node/master01 untainted
+[student@workstation ~]$ oc describe node master01 | grep -i taint
+Taints:             <none>
+[student@workstation ~]$ oc get pods
+NAME                             READY   STATUS    RESTARTS   AGE
+webserver-app1-c8995748c-4cg5l   1/1     Running   0          9m48s
+
+[student@workstation ~]$
+```
+
+### Check the service is created or not ?
+```
+oc get service
+```
+
+## If it is not created then create a new one.
+```
+oc expose service webserver-app1
+```
+### How to check ?
+```
+oc get svc,route
+```
+### Open the webiste. Either CLI or webportal.
+```
+curl ebserver-app1-chapter1.apps.ocp4.example.com  | head
+```
+
 
 ### Check the `nodeSelector` in the Deployment
 ```
