--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -1,8 +1,8 @@
-## How to create the lab for question1?
+## Prepare the lab for this question 1?
 ```
 oc adm taint node $(oc get nodes | awk '{print $1}' | grep -v NAME) datacenter=delhi:NoSchedule
 oc new-project chapter1
-oc new-app --name webserver-app1 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0 --replicas 1
+oc new-app --name webserver-app1 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0 
 ```
 
 
@@ -83,91 +83,110 @@ oc get svc,route
 ```
 curl ebserver-app1-chapter1.apps.ocp4.example.com  | head
 ```
-
-
-### Check the `nodeSelector` in the Deployment
+---
+## Prepare the lab for this question 2?
 ```
-oc get deployment/deployment_name -o yaml 
-```
-
-### Check the node lables.
-```
-oc get nodes --show-lables
+oc new-project chapter2
+oc new-app --name webserver-app2 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
+oc expose service webserver-app2 
+oc patch service webserver-app2 -n chapter2 --type=json -p='[{"op": "replace", "path": "/spec/selector/deployment", "value": "anishrana2001"}]'
 ```
 
-### We can overwrite the labels 
 
-```
-oc label nodes master3 app=prod --overwrite 
-```
-
-### Now, the pod should be running. But website is still not working. 
-### Its time to check the service.
-
-```
-oc describe service/todo-svc
-```
-
-### One can notice that endpoints are missing. You need to update the label at service. Thus, check the Deployment's yaml file and look for `template.metadata.label`
-
-```
-oc get deployment/deployment_name -o yaml 
-```
-
-### Deployment is working so we will not going to change the label of Deployment and service is not working, so we will modify the service label.
-```
-oc edit service/todo-svc
-```
-
-#### Post check : Check the endpoints
-```
-oc describe service/todo-svc
-```
-
-### At the end check the URL 
-
-
-
-
-
-
-# Qustion 2. An application is running on the `blue` project. There is one pod running and your task is it must generate the output.
-
-### Solution:
-
-```
-oc project blue
-```
+# Question 2. An application is running on the `chapter2` project. There is one pod running and your task is it must generate the output.
+---
+### Solution
+### Check the resources.
 ```
 oc get all
 ```
 
+### You may observe that pods is running. So, check the logs and event
 ```
-oc get nodes
+oc logs pods/pod_name
+```
+```
+oc events
+```
+### You may not observe any thing. So let's open the URL
+```
+oc get route
+```
+### For my lab, it is : webserver-app2-chapter2.apps.ocp4.example.com
+```
+http://webserver-app2-chapter2.apps.ocp4.example.com
 ```
 
-### Check the `nodeSelector` in the Deployment
+### It should not work. It means that application inside the pod is working fine but we are not able to reach to pod.
+### Check service.
+```
+oc describe service webserver-app2
+```
+
+````
+[student@workstation ~]$ oc describe service webserver-app2 
+Name:              webserver-app2
+Namespace:         chapter2
+Labels:            app=webserver-app2
+                   app.kubernetes.io/component=webserver-app2
+                   app.kubernetes.io/instance=webserver-app2
+Annotations:       openshift.io/generated-by: OpenShiftNewApp
+Selector:          deployment=anishrana2001      ### Check the label
+Type:              ClusterIP
+IP Family Policy:  SingleStack
+IP Families:       IPv4
+IP:                172.30.127.45
+IPs:               172.30.127.45
+Port:              8080-tcp  8080/TCP
+TargetPort:        8080/TCP
+Endpoints:         <none>      ### End points are empty.
+Session Affinity:  None
+Events:            <none>
+```
+### One can notice that endpoints are missing. You need to update the label on service. Thus, check the Deployment's yaml file and look for `template.metadata.label`
+### Deployment is working so we will not going to change the label of Deployment and service is not working, so we will modify the service label.
 ```
 oc get deployment/deployment_name -o yaml 
 ```
+### For your references.
+```
+  template:
+    metadata:
+      annotations:
+        openshift.io/generated-by: OpenShiftNewApp
+      creationTimestamp: null
+      labels:
+        deployment: webserver-app2   >>>>
+    spec:
+      containers:
+      - image: registry.ocp4.example.com:8443/redhattraining/hello-world-nginx@sha256:6926d361b8e2f778f88341fbd0d231337c38d12c177fdacf2a677dc6b70a1f59
+        imagePullPolicy: IfNotPresent
+```
 
 ```
-kubectl taint nodes workernode1 color=blue:NoSchedule
+oc edit service/todo-svc
 ```
+
+### See the reference image.
+
+
+### check the service again.
 ```
-oc describe  node worker1 | grep -i taint
+oc describe service webserver-app2
 ```
-### delete taint  lines in node file
-``` 
-oc edit node worker1    
+
+### You may not observe any thing. So let's open the URL
 ```
-### delete same taint  line
+oc get route
 ```
-oc edit node worker2
+### For my lab, it is : webserver-app2-chapter2.apps.ocp4.example.com
 ```
-### Make sure  pod should be in running  state
+http://webserver-app2-chapter2.apps.ocp4.example.com
 ```
-oc get  po
-```
+
+
+
+
+
 
 
