Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -123,7 +123,7 @@ http://webserver-app2-chapter2.apps.ocp4.example.com
 oc describe service webserver-app2
 ```
 
-````
+```
 [student@workstation ~]$ oc describe service webserver-app2 
 Name:              webserver-app2
 Namespace:         chapter2
@@ -168,6 +168,7 @@ oc edit service/todo-svc
 ```
 
 ### See the reference image.
+![image](https://github.com/user-attachments/assets/5c61faff-6404-440e-98a4-05f52d8bdae1)
 
 
 ### check the service again.
