--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -185,9 +185,24 @@ oc get route
 http://webserver-app2-chapter2.apps.ocp4.example.com
 ```
 
+---
+## Prepare the lab for this question 3?
+```
+oc new-project chapter3
+oc new-app --name webserver-app3 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
+oc expose service webserver-app3
+oc patch deployment webserver-app3 -n chapter3 --type=json -p='[{"op": "add", "path": "/spec/template/spec/nodeSelector","value":{"disktype":"ssd"}}]'
+
+```
 
 
-
+# Question 3. An application is running on the `chapter2` project. There is one pod, which is in pending state. Your task is it must generate the output.
+---
+### Solution
+### Check the resources.
+```
+oc get all
+```
 
 
 
