Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -239,7 +239,7 @@ spec:
       securityContext: {}
       terminationGracePeriodSeconds: 30
 EOF
-
+oc expose deployment/webserver-app3
 oc expose service webserver-app3
 
 
