Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -253,13 +253,59 @@ oc expose service webserver-app3
 ```
 oc get all
 ```
-
+### Check the logs of pod.
 ```
+oc log pod/PODNAME
+```
+
+## Check the events.
+```
+oc event
+```
+### From the above output, it is clear that, we have issue due to to `nodeSelector`.
+
+### Check the nodeSelector value in the deployment
+```
+oc get deployment/webserver-app3 -o yaml | grep -iA 5 selector
+```
+
+### Check the label on nodes. Please note that I have 1 node, so I am checking label on 1 node only. If  you have multiple, then you need to check the label on all nodes.
+```
+oc describe nodes master01  | grep -iA 5 label
+```
+
+### Please note that, I am adding label on 1 node only. If  you have multiple nodes, then you need to add the label on all nodes.
+```
+oc label nodes master01 disktype=ssd
+```
+
+### Check the label again on node.
+```
+oc describe nodes master01  | grep -iA 5 label
+```
+
+### Post checks!!
+```
+oc get pods
+```
+
+
+## Check the route.
+```
+oc get route
+```
+### Copy the URL and paste into the webbrowser.
+
+### Below are for your references.
+```
+[student@workstation ~]$ oc event
 5m8s        Normal    Killing                  Pod/webserver-app3-7b4bd5c879-lhwjk    Stopping container webserver-app3
 5m8s        Warning   FailedScheduling         Pod/webserver-app3-5946c66dc4-pxq87    skip schedule deleting pod: chapter3/webserver-app3-5946c66dc4-pxq87
 4m53s       Normal    SuccessfulCreate         ReplicaSet/webserver-app3-5946c66dc4   Created pod: webserver-app3-5946c66dc4-rvsz5
 4m53s       Normal    ScalingReplicaSet        Deployment/webserver-app3              Scaled up replica set webserver-app3-5946c66dc4 to 1
-4m53s       Warning   FailedScheduling         Pod/webserver-app3-5946c66dc4-rvsz5    0/1 nodes are available: 1 node(s) didn't match Pod's node affinity/selector. preemption: 0/1 nodes are available: 1 Preemption is not helpful for scheduling..
+4m53s       Warning   FailedScheduling         Pod/webserver-app3-5946c66dc4-rvsz5    **0/1 nodes are available: 1 node(s) didn't match Pod's node `affinity/selector`. preemption: 0/1 nodes are available: 1 Preemption is not helpful for scheduling..**
+
+
 [student@workstation ~]$ oc get deployment/webserver-app3 -o yaml | grep -iA 5 selector
       {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"webserver-app3","app.kubernetes.io/component":"webserver-app3","app.kubernetes.io/instance":"webserver-app3"},"name":"webserver-app3","namespace":"chapter3"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"deployment":"webserver-app3"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"annotations":{"kubectl.kubernetes.io/restartedAt":"2025-05-13T03:57:01-04:00","openshift.io/generated-by":"OpenShiftNewApp"},"labels":{"deployment":"webserver-app3"}},"spec":{"containers":[{"image":"registry.ocp4.example.com:8443/redhattraining/hello-world-nginx@sha256:6926d361b8e2f778f88341fbd0d231337c38d12c177fdacf2a677dc6b70a1f59","imagePullPolicy":"IfNotPresent","name":"webserver-app3","ports":[{"containerPort":8080,"protocol":"TCP"}],"resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","nodeSelector":{"disktype":"ssd"},"restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}}}
   creationTimestamp: "2025-05-13T08:03:49Z"
@@ -275,8 +321,8 @@ oc get all
     rollingUpdate:
       maxSurge: 25%
 --
-      nodeSelector:
-        disktype: ssd
+      nodeSelector:            ### 👈👈👈
+        disktype: ssd          ### 👈👈👈
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
@@ -285,12 +331,11 @@ oc get all
 Labels:             beta.kubernetes.io/arch=amd64
 [student@workstation ~]$ oc label nodes master01 disktype=ssd
 node/master01 labeled
-[student@workstation ~]$ oc describe nodes master01  | grep -i label
-Labels:             beta.kubernetes.io/arch=amd64
+
 [student@workstation ~]$ oc describe nodes master01  | grep -iA 5 label
 Labels:             beta.kubernetes.io/arch=amd64
                     beta.kubernetes.io/os=linux
-                    disktype=ssd
+                    disktype=ssd    ### 👈👈👈
                     kubernetes.io/arch=amd64
                     kubernetes.io/hostname=master01
                     kubernetes.io/os=linux
