Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -28,7 +28,7 @@ oc env
 3m14s                 Normal    ScalingReplicaSet   Deployment/webserver-app1              Scaled up replica set webserver-app1-c8995748c to 1
 3m14s                 Normal    ScalingReplicaSet   Deployment/webserver-app1              Scaled up replica set webserver-app1-6bc4fdd7b6 to 1
 3m14s                 Normal    SuccessfulCreate    ReplicaSet/webserver-app1-c8995748c    Created pod: webserver-app1-c8995748c-4cg5l
-3m14s                 Warning   FailedScheduling    Pod/webserver-app1-c8995748c-4cg5l     0/1 nodes are available: 1 node(s) had untolerated taint {datacenter: delhi}. preemption: 0/1 nodes are available: 1 Preemption is not helpful for scheduling..
+3m14s                 Warning   FailedScheduling    Pod/webserver-app1-c8995748c-4cg5l     0/1 nodes are available: 1 node(s) had **`untolerated taint`** {datacenter: delhi}. preemption: 0/1 nodes are available: 1 Preemption is not helpful for scheduling..
 3m13s                 Warning   FailedCreate        ReplicaSet/webserver-app1-6bc4fdd7b6   Error creating: Pod "webserver-app1-6bc4fdd7b6-6kzn4" is invalid: spec.containers[0].image: Invalid value: " ": must not have leading or trailing whitespace
 30s (x7 over 3m12s)   Warning   FailedCreate        ReplicaSet/webserver-app1-6bc4fdd7b6   (combined from similar events): Error creating: Pod "webserver-app1-6bc4fdd7b6-wvwzj" is invalid: spec.containers[0].image: Invalid value: " ": must not have leading or trailing whitespace
 
@@ -53,16 +53,19 @@ oc get pods
 [student@workstation ~]$ oc get pods
 NAME                             READY   STATUS    RESTARTS   AGE
 webserver-app1-c8995748c-4cg5l   0/1     Pending   0          6m44s
+
 [student@workstation ~]$ oc describe node master01 | grep -i taint
 Taints:             datacenter=delhi:NoSchedule
+
 [student@workstation ~]$ oc adm taint node master01 datacenter-
 node/master01 untainted
+
 [student@workstation ~]$ oc describe node master01 | grep -i taint
 Taints:             <none>
+
 [student@workstation ~]$ oc get pods
 NAME                             READY   STATUS    RESTARTS   AGE
 webserver-app1-c8995748c-4cg5l   1/1     Running   0          9m48s
-
 [student@workstation ~]$
 ```
 
@@ -327,8 +330,10 @@ oc get route
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+
 [student@workstation ~]$ oc describe nodes master01  | grep -i label
 Labels:             beta.kubernetes.io/arch=amd64
+
 [student@workstation ~]$ oc label nodes master01 disktype=ssd
 node/master01 labeled
 
