--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -93,6 +93,16 @@ oc get deployment gitlab -o yaml | grep -i service
       serviceAccountName: ex280-sa
 [student@workstation ~]$ 
 ```
-
+### Expose the service 
+```
+oc expose service/gitlab
+```
+### Post check 
+```
+oc get route
+```
+```
+ssh gitlab-alpha.apps.ocp4.example.com
+```
 
 
