--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -2,6 +2,14 @@
 ```
 oc new-project network-policy
 oc new-app --name hello  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
+cat <<EOF | kubectl apply -f -
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: deny-all
+spec:
+  podSelector: {}
+EOF
 oc expose service/hello
 oc new-project different-namespace
 oc new-app --name sample-app  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
