--- a/DO280/15. Volume.md
+++ b/DO280/15. Volume.md
@@ -1,6 +1,6 @@
 # Create PV, PVC and then deployment.
 - **Create a pv**
-	- Name is tiger-pv
+	- Name is `tiger-pv`
 	- Size: `1Gi`
 	- Policy: `retain`
 	- Mode: `ReadOnlyMany`
