--- a/DO280/19. How to remove.md
+++ b/DO280/19. How to remove.md
@@ -11,5 +11,6 @@ oc adm policy remove-scc-from-user anyuid system:serviceaccount:alpha:ex280-sa
 
 
 ```
-for i in alpha anish-test1 app-db back-end beta chapter1 chapter2 chapter3 cloud different-namespace front-end network-policy orange page quart scalling tiger tuesday  ; do oc delete project $i ;don
+for i in alpha anish-test1 app-db back-end beta chapter1 chapter2 chapter3 cloud different-namespace front-end network-policy orange page quart scalling tiger tuesday  ; do oc delete project $i ;done
+oc delete pv tiger-pv
 ```
