Update 19. How to remove.md

--- a/DO280/19. How to remove.md
+++ b/DO280/19. How to remove.md
@@ -13,4 +13,9 @@ oc adm policy remove-scc-from-user anyuid system:serviceaccount:alpha:ex280-sa
 ```
 for i in alpha anish-test1 app-db back-end beta chapter1 chapter2 chapter3 cloud different-namespace front-end network-policy orange page quart scalling tiger tuesday  ; do oc delete project $i ;done
 oc delete pv tiger-pv
+oc delete groups.user.openshift.io qa
+oc delete groups.user.openshift.io developers
+oc delete groups.user.openshift.io leaders
+oc delete user leader qa-engineer raja
+rm -rf /tmp/htpasswd  
 ```
