Update 19. How to remove.md

--- a/DO280/19. How to remove.md
+++ b/DO280/19. How to remove.md
@@ -17,5 +17,9 @@ oc delete groups.user.openshift.io qa
 oc delete groups.user.openshift.io developers
 oc delete groups.user.openshift.io leaders
 oc delete user leader qa-engineer raja
-rm -rf /tmp/htpasswd  
+rm -rf /tmp/htpasswd
+oc delete template/project-request -n openshift-config
+cd /tmp
+rm -rf server.key  server.csr server.crt limitrange.yaml cronjob.yaml allow-specfic.yaml bootstrap.yaml cronjob.yaml
+
 ```
