Update 19. How to remove.md

--- a/DO280/19. How to remove.md
+++ b/DO280/19. How to remove.md
@@ -26,4 +26,6 @@ rm -rf server.key  server.csr server.crt limitrange.yaml cronjob.yaml allow-spec
 
 oc delete template/project-request -n openshift-config
 oc patch project.config cluster --type=json -p='[{"op": "remove", "path": "/spec/projectRequestTemplate", "value": ""}]'
+
+oc label nodes master01 disktype-
 ```
