--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -2,7 +2,8 @@
 # Question 2. Manage Cluster Project and Permissions:
 - Create 3 projects, `front-end`, `back-end`, and `app-db`
 - `harry` user should have cluster administrator rights.
-- `leader` user should be able create project but not administrator tasks or no other user should able to create project.
+- `leader` user should be able create project but not administrator tasks.
+- No other user should able to create project.
 - `raja` user can only `view` the resources of `front-end` and `back-end` projects.
 - `qa-engineer` user should have `admin` access to  `front-end` project.
 - `kubaadmin` is  not present  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
