Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -26,15 +26,15 @@ oc adm policy add-cluster-role-to-user cluster-admin harry
 
 ### or no other user should able to create project.
 ```
-oc describe clusterrolebindings self-provisioner 
+oc describe clusterrolebindings self-provisioners 
 ```
 ```
-oc adm policy remove-cluster-role-from-group  self-provisioner system:authenticated:oauth
+oc adm policy remove-cluster-role-from-group  self-provisioners system:authenticated:oauth
 ```
 
 ### `leader` user should be able create project but not administrator tasks
 ```
-oc adm policy add-cluster-role-to-user self-provisioner leader
+oc adm policy add-cluster-role-to-user self-provisioners leader
 ```
 ### `raja` user can only `view` the resources of `front-end` and `back-end` projects.
 ```
