Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -28,6 +28,8 @@ oc adm policy add-cluster-role-to-user cluster-admin harry
 ```
 oc describe clusterrolebindings self-provisioners 
 ```
+
+### You may observe that ClusterRoleBinding "self-provisioners" has some group added like "system:authenticated:oauth"
 ```
 oc adm policy remove-cluster-role-from-group  self-provisioners system:authenticated:oauth
 ```
