--- a/DO280/01. Configure Authentication.md
+++ b/DO280/01. Configure Authentication.md
@@ -55,7 +55,7 @@ spec:
 oc replace -f oauth.yaml
 ```
 ```
-watch oc get all -n openshift-authentication
+watch oc get pods -n openshift-authentication
 ```
 
 
