Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -54,7 +54,7 @@ subjects:
 
 ### Let's remove this group from this ClusterRoleBinding.
 ```
-oc adm policy remove-cluster-role-from-group  self-provisioners system:authenticated:oauth
+oc adm policy remove-cluster-role-from-group  self-provisioner system:authenticated:oauth
 ```
 
 ### `leader` user should be able create project but not administrator tasks
