Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -1,3 +1,9 @@
+## If you are using REDHAT LAB then use below to create the lab for this question.
+```
+lab start appsec-scc
+oc login -u admin -p redhatocp https://api.ocp4.example.com:6443
+```
+
 
 # Question 2. Manage Cluster Project and Permissions:
 - Create 3 projects, `front-end`, `back-end`, and `app-db`
