Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -58,7 +58,7 @@ subjects:
 ```
 
 
-### Let's remove this group from this ClusterRoleBinding.
+### Let's remove this group from this ClusterRole.
 ```
 oc adm policy remove-cluster-role-from-group  self-provisioner system:authenticated:oauth
 ```
