--- a/DO280/12. Helm.md
+++ b/DO280/12. Helm.md
@@ -1,7 +1,10 @@
-# Install an helm chart `etherpad` from repository `http://helm.ocp4.example.com/charts`
+# Install an helm chart `etherpad` from repository `http://helm.ocp4.example.com/charts` in the `mass` project
 
 ## Solution:
-
+### First, create a project `mass`
+```
+oc new-project mass
+```
 ### Use the helm repo list command to list the repositories that are configured for the student user.
 ```
 helm repo list
