--- a/DO280/15. Volume.md
+++ b/DO280/15. Volume.md
@@ -7,11 +7,12 @@
 - **Create a pvc**
 	- Name is `tiger-pvc`
 	- Size same as pv
-	- Mount pvc to `/usr/share/nginx/html`
 	- Project name is `page`
 	- Mode same as pv
 - **Create an Deployment with**
 	- Name of deployment is `tiger`
+        - consume the pvc `tiger-pvc`
+   	- Mount pvc to `/usr/share/nginx/html`
 	- Image is  `registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0`
 	- Application uses this link to show output http://test-anishrana2001.apps.ocp4.example.com
 	- After attaching storage it shows desired output
