--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -9,6 +9,7 @@ oc expose service todo-http --hostname  server1.apps.ocp4.example.com
 # Protect External Traffic with TLS
 ### Create secure Route  with below information
 - Create a secure route in `quart` project.
+- End user traffic must decrypt at router level.
 - Expose application https://anishrana2001.apps.ocp4.example.com
 - Generate self sign certificate using given  subject	
 - "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
