Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -3,6 +3,23 @@
 oc new-project quart
 oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
 oc expose service todo-http --hostname  server1.apps.ocp4.example.com
+cat <<EOF>> script.sh
+#!/bin/bash
+printf "Country Name:\n"
+read Country
+printf "State or Province Name:\n"
+read ST
+printf "Locality:\n"
+read locality
+printf "Organization Name:\n"
+read OName
+printf "Common Name:\n"
+read CName
+openssl genrsa -out server.key 4096
+openssl req -new -key server.key -out server.csr -subj "/C=$Country/ST=$ST/L=$locality/O=$OName/CN=$CName"
+openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
+EOF
+
 ```
 
 
