Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -5,21 +5,21 @@ oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattrainin
 oc expose service todo-http --hostname  server1.apps.ocp4.example.com
 cat <<EOF>> script.sh
 #!/bin/bash
-printf "Country Name:\n"
+printf "Country Name:"
 read Country
-printf "State or Province Name:\n"
+printf "State or Province Name:"
 read ST
-printf "Locality:\n"
+printf "Locality:"
 read locality
-printf "Organization Name:\n"
+printf "Organization Name:"
 read OName
-printf "Common Name:\n"
+printf "Common Name:"
 read CName
 openssl genrsa -out server.key 4096
 openssl req -new -key server.key -out server.csr -subj "/C=$Country/ST=$ST/L=$locality/O=$OName/CN=$CName"
 openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
 EOF
-
+chmod +x script.sh
 ```
 
 
