Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -118,6 +118,7 @@ oc delete route todo-http
 oc delete service todo-http
 oc delete deployment todo-http
 rm -rf server.key server.csr server.crt
+oc delete project quart
 ```
 
 
