Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -3,6 +3,7 @@
 oc new-project quart
 oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
 oc expose service todo-http --hostname  server1.apps.ocp4.example.com
+
 cat <<EOF>> script.sh
 #!/bin/bash
 printf "Country Name:"
@@ -20,6 +21,7 @@ openssl req -new -key server.key -out server.csr -subj "/C=$Country/ST=$ST/L=$lo
 openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
 EOF
 chmod +x script.sh
+mv script.sh /usr/bin/
 ```
 
 
@@ -31,7 +33,8 @@ chmod +x script.sh
 - Generate self sign certificate using given  subject	
 - "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
 - Note: Service already  created  in any given project you just have to expose  service  with https
-- The application should produce the output
+- The application should produce the output.
+- You can use the script to generate the certificate `/data/script.sh`
 ---
 ### Solution:
 ### Go to the give project `quart`
@@ -55,7 +58,12 @@ oc get route
 ```
 oc delete routes.route.openshift.io todo-http
 ```
+### You can use the script 
 
+<img width="691" alt="image" src="https://github.com/user-attachments/assets/6709e169-915d-4ba4-a5e2-d0c01857d8c2" />
+
+
+## Or you can generate manually.
 ### 1. Generate a Private Key:
 ```
 openssl genrsa -out server.key 4096
@@ -92,12 +100,12 @@ openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
 - -out your Certificate file.
 
   
-### Now, we have to delete the existing route and create a same route with CRT and KEY.
+### Now, we have to delete the existing route and created the cretificate and keys from the script / manual.
 
 ```
 oc get all
 ```
-
+### We need to create the route edge.
 ```
 oc create route edge --service todo-http --key server.key --cert server.crt --hostname anishrana2001.apps.ocp4.example.com
 
@@ -119,6 +127,7 @@ oc delete service todo-http
 oc delete deployment todo-http
 rm -rf server.key server.csr server.crt
 oc delete project quart
+rm -rf /usr/bin/script.sh
 ```
 
 
