Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -21,7 +21,7 @@ openssl req -new -key server.key -out server.csr -subj "/C=$Country/ST=$ST/L=$lo
 openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
 EOF
 chmod +x script.sh
-mv script.sh /usr/bin/
+sudo mv script.sh /usr/bin/
 ```
 
 
@@ -127,7 +127,7 @@ oc delete service todo-http
 oc delete deployment todo-http
 rm -rf server.key server.csr server.crt
 oc delete project quart
-rm -rf /usr/bin/script.sh
+sudo rm -rf /usr/bin/script.sh
 ```
 
 
