--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -249,10 +249,15 @@ oc expose service webserver-app3
 ```
 
 
-# Question 3. An application is running on the `chapter2` project. There is one pod, which is in pending state. Your task is it must generate the output.
+# Question 3. An application is running on the `chapter3` project. There is one pod, which is in pending state. Your task is it must generate the output.
 ---
 ### Solution
 ### Check the resources.
+## Got to the project
+```
+oc project chaper3
+```
+
 ```
 oc get all
 ```
