--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -15,36 +15,7 @@ oc new-project different-namespace
 oc new-app --name sample-app  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
 ```
 
-```
-cat > /tmp/all-details.sh
-```
-```
-#!/usr/bin/bash
 
-if oc get project -o jsonpath='{.items[*].metadata.name}' | grep -q network-policy
-then
-echo "======================================================="
-echo "PROJECT: network-policy"
-echo
-oc get pods -o custom-columns="POD NAME:.metadata.name,IP ADDRESS:.status.podIP" -n network-policy
-echo
-oc get svc -o custom-columns="SERVICE NAME:.metadata.name,CLUSTER-IP:.spec.clusterIP" -n network-policy
-echo
-oc get route -o custom-columns="ROUTE NAME:.metadata.name,HOSTNAME:.spec.host,PORT:.spec.port.targetPort" -n network-policy
-echo
-echo "========================================================"
-
-fi
-
-if oc get project -o jsonpath='{.items[*].metadata.name}' | grep -q different-namespace
-then
-echo "PROJECT:different-namespace"
-echo
-oc get pods -o custom-columns="POD NAME:.metadata.name" -n different-namespace
-echo
-echo "======================================================="
-fi
-```
 # Question: create an network policy to connect two pod which are resides in different projects
 
 - First pod is in `network-policy` namespace and second is in `different-namespace` project
@@ -118,6 +89,7 @@ oc whoami --show-console
 ```
 ```
 oc get pods -o wide
+oc get all 
 ```
 
 ## Change the project.
@@ -129,3 +101,11 @@ oc project different-namespace
 oc rsh sameple_pod_name   curl hello_POD_IP:8080
 ```
 ### If it work then, congratulation
+
+### How to clear the lab ?
+
+```
+oc delete project network-policy
+oc delete project different-namespace
+```
+
