Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -165,6 +165,10 @@ oc get deployment/deployment_name -o yaml
       - image: registry.ocp4.example.com:8443/redhattraining/hello-world-nginx@sha256:6926d361b8e2f778f88341fbd0d231337c38d12c177fdacf2a677dc6b70a1f59
         imagePullPolicy: IfNotPresent
 ```
+### Or you can use the "yq" command, to verify the labels
+```
+oc get deployment webserver-app2  -o yaml  | yq r - spec.template.metadata.labels
+```
 
 ```
 oc edit service/todo-svc
