Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -70,7 +70,7 @@ oc adm policy add-cluster-role-to-user self-provisioners leader
 ### `raja` user can only `view` the resources of `front-end` and `back-end` projects.
 ```
 oc adm policy add-cluster-role-to-user view raja -n front-end
-oc adm policy add-cluster-role-to-user view qa-engineer -n back-end
+oc adm policy add-cluster-role-to-user view raja -n back-end
 ```
 ### `qa-engineer` user should have `admin` access to  `front-end` project.
 ```
