--- a/DO280/11. AutoScale.md
+++ b/DO280/11. AutoScale.md
@@ -20,7 +20,7 @@ oc get all
 ```
 ### Task 1. Minimum replicas = 2 , Maximum replicas = 5 and cpu percentage = 50%
 ```
-oc autoscale deployment httpd --min=2 --max=5 --cpu-percent=50
+oc autoscale deployment hello --min=2 --max=5 --cpu-percent=50
 ```
 ### Post check
 ```
@@ -32,7 +32,7 @@ oc get hpa
 ### Syntax would be "oc set resources deployment/httpd `--requests` cpu=200m,memory=256Mi `--limits` cpu=500m,memory=512Mi
 
 ```
-oc set resources deployment/httpd --requests=cpu=50m,memory=100Mi 
+oc set resources deployment/hello --requests=cpu=50m,memory=100Mi 
 ```
 
 ### Or if you want to edit then make the entry like this. ### Need to check.
