--- a/DO280/11. AutoScale.md
+++ b/DO280/11. AutoScale.md
@@ -28,8 +28,8 @@ oc get hpa
 ```
 
 ### Task 2: Default request for containers memory should 100Mi and CPU 50m
-### We can directly `edit` the deployment "oc edit deployment/httpd". Or we can use "oc set resources". Command is more easy.
-### Syntax would be "oc set resources deployment/httpd `--requests` cpu=200m,memory=256Mi `--limits` cpu=500m,memory=512Mi
+### We can directly `edit` the deployment "oc edit deployment/hello". Or we can use "oc set resources". Command is more easy.
+### Syntax would be "oc set resources deployment/hello `--requests` cpu=200m,memory=256Mi `--limits` cpu=500m,memory=512Mi
 
 ```
 oc set resources deployment/hello --requests=cpu=50m,memory=100Mi 
