Update 01. Configure Authentication.md

--- a/DO280/01. Configure Authentication.md
+++ b/DO280/01. Configure Authentication.md
@@ -21,7 +21,7 @@ cat /home/student/htpasswd
 ```
 htpasswd -b /home/student/htpasswd leader review
 htpasswd -b /home/student/htpasswd raja review
-htpasswd -b /home/student/htpasswd  qa-engineer reivew 
+htpasswd -b /home/student/htpasswd  qa-engineer review 
 ```
 ```
 cat /home/student/htpasswd
