Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -3,8 +3,11 @@
 oc new-project quart
 oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
 oc expose service todo-http --hostname  server1.apps.ocp4.example.com
-
-cat <<EOF>> script.sh
+```
+```
+cat > script.sh
+```
+```
 #!/bin/bash
 printf "Country Name:"
 read Country
