Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -16,6 +16,7 @@ read ST
 printf "Locality:"
 read locality
 printf "Organization Name:"
+printf "MyName:"
 read OName
 printf "Common Name:"
 read CName
