Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -5,28 +5,12 @@ oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattrainin
 oc expose service todo-http --hostname  server1.apps.ocp4.example.com
 ```
 ```
-cat > script.sh
+curl -o /tmp/Openssl-script.sh https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO280/Openssl-script.sh
 ```
 ```
-#!/bin/bash
-printf "Country Name:"
-read Country
-printf "State or Province Name:"
-read ST
-printf "Locality:"
-read locality
-printf "Organization Name:"
-printf "MyName:"
-read OName
-printf "Common Name:"
-read CName
-openssl genrsa -out server.key 4096
-openssl req -new -key server.key -out server.csr -subj "/C=$Country/ST=$ST/L=$locality/O=$OName/CN=$CName"
-openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
-
+mv /tmp/Openssl-script.sh  /tmp/script.sh
 ```
-```
-chmod +x script.sh
+chmod +x /tmp/script.sh
 sudo mv script.sh /usr/bin/
 ```
 
