Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -12,7 +12,7 @@ mv /tmp/Openssl-script.sh  /tmp/script.sh
 ```
 ```
 chmod +x /tmp/script.sh
-sudo mv script.sh /usr/bin/
+sudo mv /tmp/script.sh /usr/bin/
 ```
 
 
