Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -47,7 +47,8 @@ oc delete routes.route.openshift.io todo-http
 ```
 ### You can use the script 
 
-<img width="691" alt="image" src="https://github.com/user-attachments/assets/6709e169-915d-4ba4-a5e2-d0c01857d8c2" />
+
+![image](https://github.com/user-attachments/assets/092e8ce5-fd32-42c0-a9e6-c2a894910843)
 
 
 ## Or you can generate manually.
