Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -11,5 +11,5 @@
 		- restart
 - Create a `apple` Project
 - User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
-  ### Please note that the password of users raja and suraj must be "Mydear123"
+  ### Please note that the password of raja and suraj users must be "Mydear123"
   ---
