Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -1,9 +1,16 @@
-
+# Prepare the lab.
+```
+oc -n openshift-config get secrets htpasswd-secret -o json | jq -r '.data.htpasswd' | base64 --decode > /tmp/htpasswd-ex316.text
+htpasswd -b /tmp/htpasswd-ex316.text suraj anishrana2001
+htpasswd -b /tmp/htpasswd-ex316.text raja anishrana2001
+oc -n openshift-config delete secrets htpasswd-secret 
+oc -n openshift-config create secret generic htpasswd-secret --from-file htpasswd=/tmp/htpasswd-ex316.text
+```
 
 # Configure User access and complete the below tasks.
 - Create a `banana` Project.
-- Create a `raja` user and he should able to Create and Manage VirtualMachine.
-- Create a `suraj` user and he can view and access the "VirtualMachine performance metrics".
+- A `raja` user should able to Create and Manage VirtualMachine.
+- A `suraj` user should view and access the "VirtualMachine performance metrics".
 - User `suraj` allowed below rights to VirtualMachine
 	- start
 	- stop
@@ -11,5 +18,5 @@
 	- restart
 - Create a `apple` Project
 - User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
-  ### Please note that the password of raja and suraj users must be "Mydear123"
+  ### Please note that the password of raja and suraj users is "anishrana2001"
   ---
