Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -9,14 +9,16 @@ oc -n openshift-config create secret generic htpasswd-secret --from-file htpassw
 
 # Configure User access and complete the below tasks.
 - Create a `banana` Project.
-- A `raja` user should able to Create and Manage VirtualMachine.
-- A `suraj` user should view and access the "VirtualMachine performance metrics".
-- User `suraj` allowed below rights to VirtualMachine
-	- start
-	- stop
-	- pause
-	- restart
+- For project `banana`
+	- A `raja` user should able to Create and Manage VirtualMachine.
+	- A `suraj` user should view and access the "VirtualMachine performance metrics".
+	- User `suraj` allowed below rights to VirtualMachine
+		- start
+		- stop
+		- pause
+		- restart
 - Create a `apple` Project
-- User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
+- For project `apple`
+	- User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
   ### Please note that the password of raja and suraj users is "anishrana2001"
   ---
