Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -12,11 +12,8 @@ oc -n openshift-config create secret generic htpasswd-secret --from-file htpassw
 - For project `banana`
 	- A `raja` user should able to Create and Manage VirtualMachine.
 	- A `suraj` user should view and access the "VirtualMachine performance metrics".
-	- User `suraj` allowed below rights to VirtualMachine
-		- start
-		- stop
-		- pause
-		- restart
+	- User `suraj` allowed to start/stop/restart/pause the VirtualMachine
+
 - Create a `apple` Project
 - For project `apple`
 	- User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
