Update 03. User Access.md

--- a/DO316/03. User Access.md
+++ b/DO316/03. User Access.md
@@ -19,3 +19,32 @@ oc -n openshift-config create secret generic htpasswd-secret --from-file htpassw
 	- User suraj has the necessary roles needed to create and manage VirtualMachines in `apple` project.
   ### Please note that the password of raja and suraj users is "anishrana2001"
   ---
+## Solution
+#### Create a `banana` Project.
+```
+oc new-project banana
+```
+
+#### A raja user should able to Create and Manage VirtualMachine.
+```
+oc create rolebinding admin1 --clusterrole=admin --user=raja -n banana
+```
+
+#### A suraj user should view and access the "VirtualMachine performance metrics".
+```
+oc create rolebinding view-suraj --clusterrole=view --user=suraj -n banana 
+```
+#### User suraj allowed to start/stop/restart/pause the VirtualMachine
+```
+oc get clusterrole | grep edit | grep kube
+oc create rolebinding edit-suraj --clusterrole=kubevirt.io:edit --user=suraj -n banana 
+```
+#### Create a `apple` Project
+```
+oc new-project apple
+```
+
+#### User suraj has the necessary roles needed to `create and manage` VirtualMachines in `apple` project.
+```
+oc create rolebinding admin1 --clusterrole=admin --user=suraj -n apple
+```
